# validated

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  person.cpp  safe_list.cpp
include/ck/: validated.hpp
tests/: CMakeLists.txt  test_validated.cpp
